--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,30 +13,32 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-424
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/images/waypoint.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/LevelMap/", "res://Assets/", "res://Assets/spritesheets/", "res://Assets/images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-center_split_offset=0
+open_scenes=PackedStringArray("res://Project/LevelMap/LevelMap.tscn", "res://Project/NPC/npc.tscn", "res://Project/Waypoint/waypoint.tscn")
+center_split_offset=-286
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
+current_scene="res://Project/LevelMap/LevelMap.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://Project/NPC/npc.gd"]
+selected_script="res://Project/NPC/npc.gd"
+open_help=["NavigationAgent2D", "NavigationServer2D", "RID"]
 script_split_offset=70
 list_split_offset=0
 
