--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/images/waypoint.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/LevelMap/", "res://Assets/", "res://Assets/spritesheets/", "res://Assets/images/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/NPC/", "res://Project/LevelMap/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Project/LevelMap/LevelMap.tscn", "res://Project/NPC/npc.tscn", "res://Project/Waypoint/waypoint.tscn")
-center_split_offset=-286
+open_scenes=PackedStringArray("res://Project/LevelMap/LevelMap.tscn", "res://Project/NPC/npc.tscn", "res://Project/Player/Player.tscn")
+center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Project/LevelMap/LevelMap.tscn"
+current_scene="res://Project/NPC/npc.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Project/NPC/npc.gd"]
+open_scripts=["res://Project/NPC/npc.gd", "res://Project/Player/Player.gd"]
 selected_script="res://Project/NPC/npc.gd"
-open_help=["NavigationAgent2D", "NavigationServer2D", "RID"]
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 
