--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Project/Singletons/SignalManager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/Singletons/")
+dock_filesystem_selected_paths=PackedStringArray("res://Project/Player/Player.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/Player/", "res://Project/NPC/", "res://Project/LevelMap/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Project/LevelMap/LevelMap.gd", "res://Project/NPC/npc.gd", "res://Project/Player/Player.gd", "res://Project/Singletons/SignalManager.gd"]
-selected_script="res://Project/Player/Player.gd"
-open_help=[]
+open_scripts=["res://Project/NPC/npc.gd", "res://Project/Player/Player.gd"]
+selected_script="res://Project/NPC/npc.gd"
+open_help=["RayCast2D"]
 script_split_offset=70
 list_split_offset=0
 
