--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Project/NPC/npc.gd", "res://Project/Player/Player.gd"]
 selected_script="res://Project/NPC/npc.gd"
-open_help=["RayCast2D"]
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 
