--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,21 +13,21 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-424
+dock_hsplit_3=-491
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Project/Player/Player.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/Player/", "res://Project/NPC/", "res://Project/LevelMap/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/images/bulletRed_outline.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/Singletons/", "res://Assets/", "res://Assets/images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Project/LevelMap/LevelMap.tscn", "res://Project/NPC/npc.tscn", "res://Project/Player/Player.tscn")
+open_scenes=PackedStringArray("res://Project/LevelMap/LevelMap.tscn", "res://Project/NPC/npc.tscn", "res://Project/Player/Player.tscn", "res://Project/Bullet/Bullet.tscn")
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Project/NPC/npc.gd", "res://Project/Player/Player.gd"]
+open_scripts=["res://Project/Bullet/Bullet.gd", "res://Project/LevelMap/LevelMap.gd", "res://Project/NPC/npc.gd", "res://Project/Player/Player.gd", "res://Project/Singletons/SoundManager.gd"]
 selected_script="res://Project/NPC/npc.gd"
 open_help=[]
 script_split_offset=70
