--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/images/bulletRed_outline.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/Singletons/", "res://Assets/", "res://Assets/images/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/images/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Project/LevelMap/LevelMap.tscn", "res://Project/NPC/npc.tscn", "res://Project/Player/Player.tscn", "res://Project/Bullet/Bullet.tscn")
+open_scenes=PackedStringArray("res://Project/LevelMap/LevelMap.tscn", "res://Project/GameUi/GameUi.tscn", "res://Project/Exit/Exit.tscn", "res://Project/PickUp/PickUp.tscn")
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Project/NPC/npc.tscn"
+current_scene="res://Project/Exit/Exit.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Project/Bullet/Bullet.gd", "res://Project/LevelMap/LevelMap.gd", "res://Project/NPC/npc.gd", "res://Project/Player/Player.gd", "res://Project/Singletons/SoundManager.gd"]
-selected_script="res://Project/NPC/npc.gd"
+open_scripts=["res://Project/Exit/Exit.gd", "res://Project/GameUi/GameUi.gd", "res://Project/LevelMap/LevelMap.gd", "res://Project/PickUp/PickUp.gd", "res://Project/Singletons/SignalManager.gd"]
+selected_script="res://Project/Exit/Exit.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
