--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,24 +19,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Project/Player/Player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/Singletons/", "res://Project/Player/", "res://Project/NPC/", "res://Project/GameUi/", "res://Project/Exit/", "res://Assets/", "res://Assets/images/")
+dock_filesystem_selected_paths=PackedStringArray("res://Project/NPC/npc.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Project/", "res://Project/Singletons/", "res://Project/NPC/", "res://Project/LevelMap/", "res://Project/GameUi/", "res://Project/Bullet/", "res://Assets/", "res://Assets/images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Project/LevelMap/LevelMap.tscn", "res://Project/Main/Main.tscn", "res://Project/GameUi/GameUi.tscn", "res://Project/Exit/Exit.tscn", "res://Project/Player/Player.tscn")
+open_scenes=PackedStringArray("res://Project/Bullet/Bullet.tscn")
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Project/Exit/Exit.tscn"
+current_scene="res://Project/Bullet/Bullet.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Project/Exit/Exit.gd", "res://Project/Singletons/GameManager.gd", "res://Project/GameUi/GameUi.gd", "res://Project/LevelMap/LevelMap.gd", "res://Project/Main/Main.gd", "res://Project/Player/Player.gd", "res://Project/Singletons/SignalManager.gd"]
+open_scripts=["res://Project/Bullet/Bullet.gd", "res://Project/Singletons/GameManager.gd", "res://Project/GameUi/GameUi.gd", "res://Project/NPC/npc.gd", "res://Project/Singletons/SignalManager.gd"]
 selected_script="res://Project/GameUi/GameUi.gd"
 open_help=[]
 script_split_offset=70
